# 2389-agent-rust

./: .gitignore  .markdownlint.json  CLAUDE.md  CODERABBIT_ACTION_PLAN.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_TESTING.md  DOCKER_BUILD_NOTES.md  DOCUMENTATION_STATUS.md  DYNAMIC_ROUTING_ANALYSIS.md  Dockerfile  GENERIC_AGENT_DEPLOYMENT.md  LICENSE-MIT  README.md  RUNBOOK.md  SCRIPTS_AUDIT_REPORT.md  TEST_COVERAGE_SUMMARY.md  V2_ROUTING_SUMMARY.md  docker-compose.yml
.config/: nextest.toml
.github/: dependabot.yml
config/: agent.toml.example
docker/: mosquitto.conf
docs/: AGENT_CAPABILITIES.md  ARCHITECTURE.md  CI_COMPARISON.md  CI_QUICK_START.md  CLI_TOOLS.md  COMPLEXITY_ANALYSIS.md  CONFIGURATION_REFERENCE.md  DEPLOYMENT.md  DOCUMENTATION_REVIEW.md  ERROR_HANDLING_AUDIT.md  GETTING_STARTED.md  GITHUB_ACTIONS_ENHANCEMENT.md  IGNORED_TESTS.md  INDEX.md  OBSERVABILITY.md  SECURITY_AUDIT.md  SEGFAULT_DIAGNOSIS_PLAN.md  SEGFAULT_STATUS.md  TASKENVELOPE_PROTOCOL.md  TASK_INJECTOR_GUIDE.md  TECHNICAL_REQUIREMENTS.md  TESTING.md  THOROUGH_AUDIT_SUMMARY.md  TROUBLESHOOTING.md  agent_system_prompts.md  llm_provider_test_coverage.md  rfc-agent-protocol.txt  routing_completion_plan.md  v2_routing_architecture.md
examples/: README.md  v2_workflow_demo.rs
scripts/: README.md  dev-environment.sh  lint-docs.sh  monitor-pipeline.sh  mosquitto.conf  quality-check.sh  reproduce_segfault_linux.sh  v2-workflow-test.sh
src/: config.rs  error.rs  health.rs  lib.rs  main.rs
tests/: TEST_COVERAGE_SUMMARY.md  debug_article_scraper_segfault.rs  mqtt_client_tests.rs  mqtt_integration_helpers.rs  test_agent_lifecycle.rs  test_agent_processor.rs  test_anthropic.rs  test_broker_down_startup.rs  test_chaos_resilience.rs  test_config_loading.rs  test_discovery_integration_mqtt.rs  test_error_recovery.rs  (+15 more)
(+78 files in other folders)
